;dune build --display verbose

(executables 
    (names zrun)
    (modes byte exe)
    (promote (until-clean) (into ..))
    (flags
         (:standard
               -open Base -open Interpreter -open Analyzer))
    (libraries interpreter base analyzer))

(ocamllex (modules lexer))
(menhir (modules parser)) ;;(flags --explain))

(env
 (dev
  (flags (:standard -w -9-27-32-33-35 -warn-error -A))))
