;dune build --display verbose

(executables 
    (names zrun)
    (modes byte exe)
    (promote (until-clean) (into ..))
    (flags
         (:standard
               -open Ibase -open Interpreter -open Analyzer))
    (libraries interpreter ibase analyzer))

(ocamllex (modules zrun_lexer))
(menhir (modules zrun_parser)) ;;(flags --explain))

(env
 (dev
  (flags (:standard -w -9-27-32-33-35 -warn-error -A))))
